Removed deprecated methods in libraries